<resources>
    <string name="app_name">角落</string>
    <string name="str_corner">角落</string>
    <string name="menu_search">搜索</string>
    <string name="menu_more">更多</string>
    <string name="menu_login_qq">QQ登录</string>
    <string name="menu_login_weixin">微信登录</string>
    <string name="menu_login_weibo">微博登录</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_collect_cancel">取消收藏</string>
    <string name="menu_map">地图</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_msg">消息中心</string>
    <string name="menu_topic_focused">关注的帖子</string>
    <string name="tab_favor">热门优惠</string>
    <string name="tab_topic">转角</string>
    <string name="tab_reply">回复</string>
    <string name="tab_topic_my">我的主题</string>
    <string name="tab_reply_my">我的回复</string>
    <string name="tab_attent">关注的人</string>
    <string name="tab_follower">粉丝</string>
    <string name="tab_shop">商户</string>
    <string name="tab_favor_coupon">优惠券</string>
    <string name="activity_shop">商户详情</string>
    <string name="activity_mc">网友点评</string>
    <string name="activity_fd">优惠详情</string>
    <string name="activity_fit_shop">适用商户</string>
    <string name="activity_topic">转角</string>
    <string name="activity_user">个人中心</string>
    <string name="activity_map">优惠商户列表</string>
    <string name="activity_relation">人际</string>
    <string name="activity_collect">收藏</string>
    <string name="activity_feedback">意见反馈</string>
    <string name="activity_settings">设置</string>
    <string name="activity_editinfo">编辑资料</string>
    <string name="activity_msg">消息中心</string>
    <string name="activity_reads">阅读</string>
    <string name="activity_focus">关注的帖子</string>
    <string name="activity_search">搜索</string>
    <string name="activity_gallery">查看图片</string>
    <string name="activity_moreshop">其他分店</string>
    <string name="activity_otheruser">个人资料</string>
    <string name="hint_insert_comment">请输入评价内容</string>
    <string name="hint_insert_comment2">来说两句吧</string>
    <string name="hint_insert_contact">请输入您的微信/QQ/手机/Email</string>
    <string name="hint_insert_feedback">请输入您的建议</string>
    <string name="hint_share_content">分享内容</string>
    <string name="hint_share_title">标题</string>
    <string name="hint_name">昵称不能为空</string>
    <string name="hint_sign">一句话介绍自己</string>
    <string name="btn_commit">发 布</string>
    <string name="btn_send">发 送</string>
    <string name="btn_signin">签 到</string>
    <string name="btn_focus_cancel">取消关注</string>
    <string name="btn_focus">关 注</string>
    <string name="replace_reply"><p><font color="#000">Rep：</font><font color="@color/gray_dark">Con</font></p></string>
    <string name="replace_lv"><p><font color="#000">Lv</font><font color="#B83022">3</font></p></string>
    <string name="str_change_img">更换头像</string>
    <string name="str_discount">折</string>
    <string name="str_search_hint">搜索商户</string>
    <string name="str_search_hot">热门搜索</string>
    <string name="str_location">位置：</string>
    <string name="str_phone">电话：</string>
    <string name="str_shop_fit">适用商户</string>
    <string name="str_topic_read">阅读</string>
    <string name="str_comment_my">我要评价</string>
    <string name="str_favorable">优惠信息</string>
    <string name="str_favorable_content">优惠内容</string>
    <string name="str_favorable_all">查看全部优惠</string>
    <string name="str_upload_pictrue">上传图片</string>
    <string name="str_comment_others">网友点评</string>
    <string name="str_more">更多</string>
    <string name="str_more_read">查看更多</string>
    <string name="str_more_reply">更多3条回复</string>
    <string name="str_camera">相机</string>
    <string name="str_shopping">购物</string>
    <string name="str_consult">商区</string>
    <string name="str_food">美食</string>
    <string name="str_cato">类别</string>
    <string name="str_focus">关注</string>
    <string name="str_ok">提交完成</string>
    <string name="str_focus_cancel">取消关注</string>
    <string name="str_sort">排序</string>
    <string name="str_pic_all">所有照片</string>
    <string name="str_uesage">使用方法：无需打印和下载，到商家处即可直接享用此优惠</string>
    <string name="str_settings_info">编辑资料</string>
    <string name="str_settings_msg">消息提醒</string>
    <string name="str_settings_reddot">新动态小圆点</string>
    <string name="str_settings_clear">清理缓存</string>
    <string name="str_settings_update">检查更新</string>
    <string name="str_settings_current">目前版本</string>
    <string name="str_settings_rate">给我们打分吧</string>
    <string name="str_settings_exit">退出登录</string>
    <string name="str_name">昵称：</string>
    <string name="str_sex">性别：</string>
    <string name="str_relat">关联账号：</string>
    <string name="str_sign">个人签名：</string>
    <string name="str_expand">展开全部</string>
    <string name="str_log_ing">正在登录</string>
    <string name="str_log_success">登录成功</string>
    <string name="str_log_fail">登录失败</string>
    <string name="str_log_auth">正在验证登录</string>
    <string name="str_retry">重试</string>
    <string name="str_goto">到这去</string>
    <string name="str_loading">正在加载</string>
    <string name="str_loading_retry">重新加载</string>
    <string name="str_loading_end">END</string>
    <string name="str_search_error">非常抱歉\n未能搜索到相关商户信息</string>
    <string name="str_ver_current">当前版本</string>
    <string name="str_map_stamp">地\n图\n导\n航</string>
    <string name="str_more_shop">查看其他分店</string>
    <string name="str_signed">已签到</string>
    <string name="str_city_recommand">推荐城市\n</string>
    <string name="str_city_name">城市名称:</string>
    <string name="str_city_code">城市区号:</string>
    <string name="str_city_adcode">城市编码:</string>
    <string name="str_login_qq">QQ</string>
    <string name="str_login_wechat">微信</string>
    <string name="str_login_weibo">微博</string>
    <string name="str_page_previous">上一页</string>
    <string name="str_page_next">下一页</string>
    <string name="str_feed_qq">我们非常重视您在使用过程中的体验和感受\n期待您的建设性意见： \nQQ群：379330048\n微信公众号：corner-hk</string>
    <string name="share_title">来自“角落”的分享</string>
    <string name="share_text0">在&lt;SHOP_LOCATION&gt;的&lt;SHOP_NAME&gt;有新的优惠信息哦，来看看吧！！</string>
    <string name="share_text1">&lt;FAVOR&gt;有新优惠啦，来看看吧！！</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_weixin">微信</string>
    <string name="share_weixin_scene">微信朋友圈</string>
    <string name="share_weibo">微博</string>
    <string name="share_ok">分享成功</string>
    <string name="share_error">分享失败</string>
    <string name="test"></string>
    <string name="test_one"></string>
    <string name="test_tag"></string>
    <string name="test_max"></string>
    <string name="test_time_long"></string>
    <string name="test_time_ago"></string>
    <string name="test_time_reply"></string>
    <string name="test_time_date"></string>
    <string name="test_flag_poster"></string>
    <string name="test_floor"></string>
    <string name="test_lv"></string>
    <string name="test_distance"></string>
    <string name="test_praise_ell"></string>
    <string name="test_count"></string>
    <string name="test_praise"></string>
    <string name="test_num"></string>
    <string name="test_attent"></string>
    <string name="test_size"></string>
    <string name="test_follower_plus"></string>
    <string name="test_emoji"></string>
    <string name="test_long"></string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="image_desc">图片</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="toast_log_error">登录失败</string>
    <string name="toast_log_cancel">您取消了登录</string>
    <string name="toast_log_net_exception">网络异常,请重试</string>
    <string name="toast_log_servce_exception">服务器异常,请重试</string>
    <string name="toast_log_weixin">您没有安装微信，或微信的版本不支持登录</string>
    <string name="toast_str_useage">使用方法</string>
    <string name="toast_str_focused">已关注</string>
    <string name="toast_str_unfocused">移除关注</string>
    <string name="toast_str_dot_enabled">新动态小圆点已启用</string>
    <string name="toast_str_dot_disabled">新动态小圆点已关闭</string>
    <string name="toast_str_push_enabled">已启用消息推送</string>
    <string name="toast_str_push_disabled">已关闭消息推送</string>
    <string name="toast_ver_none">没有检测到新版本</string>
    <string name="toast_img_error">图片错误，请重新选择</string>
    <string name="toast_error_title">标题不能为空</string>
    <string name="toast_error_name">昵称不允许为空</string>
    <string name="toast_error_nullfeedback">以上两项都不能为空</string>
    <string name="toast_error_searchshop">没有搜索到相应商户</string>
    <string name="toast_error_refresh">刷新失败，请重试</string>
    <string name="toast_error_reply">回复内容不允许为空</string>
    <string name="toast_error_content">内容不允许为空</string>
    <string name="toast_error_comm">评论内容不允许为空！</string>
    <string name="toast_error_location">12秒内还没有定位成功，停止定位</string>
    <string name="toast_error_net">连接超时！</string>
    <string name="toast_error_push">推送异常,请打开app尝试</string>
    <string name="toast_error_market">你没有安装任何应用市场</string>
    <string name="toast_error_merchant">暂未录入分店信息哦</string>
    <string name="toast_ok_commit">发布成功！</string>
    <string name="toast_ok_addtopic">发帖成功！</string>
    <string name="toast_ok_editinfo">信息修改成功！</string>
    <string name="toast_ok_collect">收藏成功！</string>
    <string name="toast_ok_feedback">意见提交成功！</string>
    <string name="toast_ok_focus">关注成功！</string>
    <string name="toast_ok_comm">评论成功</string>
    <string name="toast_ok_logout">你已成功退出登录</string>
    <string name="toast_ok_praise">赞+1</string>
    <string name="toast_cancel_collect">取消收藏！</string>
    <string name="toast_cancel_focus">取消关注！</string>
    <string name="toast_end_load">没有更多数据了</string>
    <string name="toast_end_shop">没有更多商户了</string>
    <string name="toast_end_topic">没有更多帖子</string>
    <string name="toast_end_sign">签到成功！</string>
    <string name="toast_reply">签到成功！</string>
    <string name="toast_sharing">正在准备分享</string>
    <string name="toast_no_weixin">没有安装微信</string>
    <string name="dialog_load">加载中&#8230;</string>
    <string name="dialog_load_shop">正在加载其他分店&#8230;</string>
    <string name="dialog_send_comm">正在发表评论&#8230;</string>
    <string name="dialog_send_topic">正在发送中&#8230;</string>
    <string name="dialog_reply_comm">正在回复评论&#8230;</string>
    <string name="dialog_search">正在搜索&#8230;</string>
    <string name="dialog_cancel_focus">取消关注&#8230;</string>
    <string name="dialog_add_focus">添加关注&#8230;</string>
    <string name="dialog_enable_push">正在打开消息推送</string>
    <string name="dialog_disable_push">正在关闭消息推送</string>
    <string name="dialog_update_title">更新</string>
    <string name="dialog_update_content">是否现在更新</string>
    <string name="dialog_update_yes">是</string>
    <string name="dialog_update_no">否</string>
    <string name="dialog_title_login">请选择登录方式</string>
    <string name="dialog_add_exit_title">放弃发贴</string>
    <string name="dialog_add_exit_content">编辑的信息将不会被保存，是否放弃编辑？</string>
    <string name="dialog_add_chose_pic_title">选择图片</string>
    <string name="dialog_add_chose_camera">相机</string>
    <string name="dialog_add_chose_album">相册</string>
    <string name="welcome_0">　　这里有全面的香港购物、美食、及时优惠与折扣信息，并导入地图定位，为您锁定商户地点。</string>
    <string name="welcome_1">　　让所有热衷于到香港游玩、购物、美食的旅客们共同拥有一个分享交流的平台。</string>
</resources>