<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/listhead_fd_root"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/listhead_fd_imgFavor"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/img_default"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"/>


    <LinearLayout
        android:id="@+id/listhead_fd_linearDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <RelativeLayout
            android:id="@+id/listhead_fd_rlDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/listhead_fd_textDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/str_favorable_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/listhead_fd_tvTime"
                style="@style/CornerView.TextView.Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/listhead_fd_textDetail"
                android:layout_alignParentRight="true"
                android:text="@string/test_time_long"/>
        </RelativeLayout>

        <View
            android:id="@+id/listhead_fd_div1"
            style="@style/CornerView.Divider"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <TextView
            android:id="@+id/listhead_fd_tvDetail"
            style="@style/CornerView.TextView.Medium.DarkGray.Readable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/test_long"/>

        <View
            android:id="@+id/listhead_fd_div3"
            style="@style/CornerView.Divider"
            android:layout_width="match_parent"
            android:layout_height="1px"/>

        <TextView
            android:id="@+id/listhead_fd_textUseage"
            style="@style/CornerView.TextView.Small.LightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="2dp"
            android:paddingTop="8dp"
            android:text="@string/str_uesage"/>
    </LinearLayout>

    <View
        android:id="@+id/listhead_fd_div2"
        style="@style/CornerView.Divider.gap"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <TextView
        android:id="@+id/listhead_fd_textFitShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/str_shop_fit"
        android:textSize="16sp"/>

    <View
        android:id="@+id/listhead_fd_div4"
        style="@style/CornerView.Divider"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
</LinearLayout>