<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearitem_tc_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:descendantFocusability="blocksDescendants"
    android:paddingBottom="6dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="6dp" >

    <ImageView
        android:id="@+id/linearitem_tc_imgHead"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="8dp"
        android:background="@drawable/selector_btn_default"
        android:src="@drawable/img_head_default" />

    <TextView
        android:id="@+id/linearitem_tc_tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/linearitem_tc_imgHead"
        android:maxWidth="230dp"
        android:singleLine="true"
        android:text="@string/test_long"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/activity_topic_imgSex"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearitem_tc_tvName"
        android:layout_alignTop="@+id/linearitem_tc_tvName"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/linearitem_tc_tvName"
        android:src="@drawable/img_sex_femal" />

    <TextView
        android:id="@+id/linearitem_tc_tvTime"
        style="@style/CornerView.TextView.Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearitem_tc_imgHead"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/linearitem_tc_tvFloor"
        android:text="@string/test_time_ago" />

    <TextView
        android:id="@+id/linearitem_tc_tvFloor"
        style="@style/CornerView.TextView.Small.LightGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearitem_tc_imgHead"
        android:layout_toRightOf="@+id/linearitem_tc_imgHead"
        android:text="@string/test_floor" />

    <EditText
        android:id="@+id/linearitem_tc_etComment"
        style="@style/CornerView.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearitem_tc_tvTime"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/linearitem_tc_imgHead"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint_insert_comment"
        android:minLines="2" />

    <LinearLayout
        android:id="@+id/linearitem_tc_linearReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearitem_tc_div0"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/linearitem_tc_imgHead"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/linearitem_tc_tvMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearitem_tc_linearReply"
        android:gravity="right"
        android:text="@string/str_more_reply"
        android:textColor="#33B5E5"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/linearitem_tc_btnReply"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:layout_alignBottom="@+id/linearitem_tc_imgHead"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:background="@drawable/selector_btn_default"
        android:scaleType="centerInside"
        android:src="@drawable/img_comm_blue" />

    <View
        android:id="@+id/linearitem_tc_div0"
        style="@style/CornerView.Divider"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_alignLeft="@+id/linearitem_tc_etComment"
        android:layout_below="@+id/linearitem_tc_etComment"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/linearitem_tc_tvLv"
        style="@style/CornerView.TextView.Small.LightGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/linearitem_tc_tvName"
        android:layout_toRightOf="@+id/activity_topic_imgSex"
        android:text="@string/test_lv" />

</RelativeLayout>