<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listitem_shop_simple_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="8dp" >

    <ImageView
        android:id="@+id/listitem_shop_simple_img"
        android:layout_width="104dp"
        android:layout_height="74dp"
        android:background="@color/img_default"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/listitem_shop_simple_linearInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="4dp" >

        <LinearLayout
            android:id="@+id/listitem_shop_simple_linearName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/listitem_shop_simple_tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/test_long"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/listitem_shop_simple_tvFlag"
                style="@style/CornerView.FrameLayout.Flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test" />
        </LinearLayout>

        <!-- 消息中心visible listitem_shop_simple_tvDesc -->

        <TextView
            android:id="@+id/listitem_shop_simple_tvDesc"
            style="@style/CornerView.TextView.Small.DarkGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/test_long"
            android:visibility="gone" />

        <!-- 消息中心gone掉listitem_shop_simple_linear -->

        <LinearLayout
            android:id="@+id/listitem_shop_simple_linear"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="center_vertical"
            android:visibility="visible" >

            <RatingBar
                android:id="@+id/listitem_shop_simple_rbRate"
                style="@style/CornerView.Ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="2dp"
                android:isIndicator="true"
                android:numStars="5" />

            <TextView
                android:id="@+id/listitem_shop_simple_tvAvg"
                style="@style/CornerView.TextView.Medium.Readable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/test_long"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listitem_shop_simple_lineaTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/listitem_shop_simple_tvTag0"
                style="@style/CornerView.TextView.Small.DarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/test_tag" />

            <TextView
                android:id="@+id/listitem_shop_simple_tvTag1"
                style="@style/CornerView.TextView.Small.DarkGray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/test_tag" />

            <TextView
                android:id="@+id/listitem_shop_simple_tvDistance"
                style="@style/CornerView.TextView.Small.LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/test_distance" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>